修改成多线程版本

--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [file]
-; 要带后缀例如图书.xlsx
+; 要带后缀例如:图书.xlsx
 file_name = 1.xlsx
 ; 要分类的栏目的序号（从0开始）
 index = 16
 ; 线程数
-thread_num = 8
+thread_num = 32
